--- a/ConnectedControlTower-master/PÁGINA INICIAL/Inde.html
+++ b/ConnectedControlTower-master/PÁGINA INICIAL/Inde.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="#home">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#jornal">The Meli Times</a>
+              <a class="nav-link" href="#file:///C:/Users/jamisoar/Desktop/ConnectedControlTower-master/ConnectedControlTower-master/P%C3%81GINA%20-%20THE%20MELI%20TIMES/index.html">The Meli Times</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Nossa História</a>
@@ -291,7 +291,7 @@
 
 
                                                       <marquee>
-                                                        <img src="img/THE MELI TIME TITLE.png" width="1500" height="201" id="jornal">
+                                                        <img src="img/THE MELI TIME TITLE.png" width="1500" height="201" id="">
                                                      </marquee>
 
                                                     </div>
